--- a/backend/.env
+++ b/backend/.env
@@ -1,20 +1,14 @@
-# CLIENT_ID=523023186785984
-# CLIENT_SECRET=00737327816fce392c2acc6502935488
-# REDIRECT_URI=http://localhost:5173/& #test
+CLIENT_ID=523023186785984
+CLIENT_SECRET=00737327816fce392c2acc6502935488
 
 
+REDIRECT_URI=https://item-list-manager-neeraj542.vercel.app/ #airth 
 
-REDIRECT_URI=https://www.airth.in/& #airth
 
-
-INSTAGRAM_CLIENT_ID=523023186785984
-INSTAGRAM_CLIENT_SECRET=00737327816fce392c2acc6502935488
-# REDIRECT_URI=http://127.0.0.1:3000/auth/redirect
 
 
 # https://www.instagram.com/oauth/authorize?client_id=523023186785984&redirect_uri=https://www.airth.in/
 # &&response_type=code&scope=instagram_business_basic,instagram_business_manage_messages,instagram_business_manage_comments,instagram_business_content_publish
 
 
-
-https://www.instagram.com/oauth/authorize?client_id=523023186785984&redirect_uri=http%3A%2F%2Flocalhost%3A5173%2F/&response_type=code&scope=instagram_business_basic%2Cinstagram_business_manage_messages%2Cinstagram_business_manage_comments%2Cinstagram_business_content_publish
+# https://www.instagram.com/oauth/authorize?client_id=523023186785984&redirect_uri=http%3A%2F%2Flocalhost%3A5173%2F/&response_type=code&scope=instagram_business_basic%2Cinstagram_business_manage_messages%2Cinstagram_business_manage_comments%2Cinstagram_business_content_publish
