--- a/frontend/.env
+++ b/frontend/.env
@@ -1,11 +1,10 @@
 
 VITE_API_BASE_URL=http://localhost:3000
 
-
 VITE_CLIENT_ID=523023186785984
-VITE_REDIRECT_URI=http://localhost:5173/& #test
-# VITE_REDIRECT_URI=http://127.0.0.1:3000/redirect #test
+
+VITE_REDIRECT_URI=https://item-list-manager-neeraj542.vercel.app/ #airth
 
 
-# VITE_REDIRECT_URI=https://www.airth.in/& #airth
-# REDIRECT_URI=
+
+
