--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "postinstall": "vite build",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
@@ -14,7 +15,8 @@
     "lucide-react": "^0.471.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.1.1"
+    "react-router-dom": "^7.1.1",
+    "vercel": "^39.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
