--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,8 @@
 CLIENT_ID=523023186785984
 CLIENT_SECRET=00737327816fce392c2acc6502935488
 
-FRONTEND_URL=https://localhost:5173
+# FRONTEND_URL=https://localhost:5173 #local
+FRONTEND_URL=https://influex-airth-two.vercel.app/
 REDIRECT_URI=https://item-list-manager-neeraj542.vercel.app/ #airth 
 
 
