--- a/backend/.env
+++ b/backend/.env
@@ -6,6 +6,32 @@ FRONTEND_URL=https://influex-airth-two.vercel.app/
 REDIRECT_URI=https://item-list-manager-neeraj542.vercel.app/ #airth 
 
 
+AWS_LAMBDA_API_URL=https://bj8sv9mqbd.execute-api.eu-north-1.amazonaws.com/dev
+
+MONGO_URI=mongodb+srv://neerajairth:VcfgwUVeSliV1BG5@influex-airth.bxfsa.mongodb.net/?retryWrites=true&w=majority&appName=influex-airth
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 # https://www.instagram.com/oauth/authorize?client_id=523023186785984&redirect_uri=https://www.airth.in/
@@ -13,3 +39,9 @@ REDIRECT_URI=https://item-list-manager-neeraj542.vercel.app/ #airth
 
 
 # https://www.instagram.com/oauth/authorize?client_id=523023186785984&redirect_uri=http%3A%2F%2Flocalhost%3A5173%2F/&response_type=code&scope=instagram_business_basic%2Cinstagram_business_manage_messages%2Cinstagram_business_manage_comments%2Cinstagram_business_content_publish
+
+
+
+# 1. storing token
+# 2. call aws api on click of save button in business details
+
