--- a/backend/.env
+++ b/backend/.env
@@ -4,7 +4,7 @@ CLIENT_SECRET=00737327816fce392c2acc6502935488
 # FRONTEND_URL=https://localhost:5173 #local
 FRONTEND_URL=https://influex-airth-two.vercel.app/
 REDIRECT_URI=https://item-list-manager-neeraj542.vercel.app/ #airth 
-
+JWT_SECRET=airth@2025
 
 AWS_LAMBDA_API_URL=https://bj8sv9mqbd.execute-api.eu-north-1.amazonaws.com/dev
 
