testing frontend ci/cd for insta-auth on /faq-form

--- a/backend/.env
+++ b/backend/.env
@@ -6,7 +6,7 @@ FRONTEND_URL=https://influex-airth-two.vercel.app/
 REDIRECT_URI=https://item-list-manager-neeraj542.vercel.app/ #airth 
 JWT_SECRET=airth@2025
 
-AWS_LAMBDA_API_URL=https://bj8sv9mqbd.execute-api.eu-north-1.amazonaws.com/dev
+AWS_LAMBDA_API_URL=https://lcxr75z1ag.execute-api.eu-north-1.amazonaws.com/dev/frontendtestingfunction
 
 MONGO_URI=mongodb+srv://neerajairth:VcfgwUVeSliV1BG5@influex-airth.bxfsa.mongodb.net/?retryWrites=true&w=majority&appName=influex-airth
 
