--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -9,7 +9,13 @@
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "server.js"
+        "dest": "server.js",
+        "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"],
+        "headers": {
+          "Access-Control-Allow-Origin": "*",
+          "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS, PATCH",
+          "Access-Control-Allow-Headers": "X-Requested-With, Content-Type, Accept, Origin, Authorization"
+        }
       }
     ]
   }
