--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
-    "vercel": "^32.3.0"
+    "vercel": "^32.3.0",
+    "cors": "^2.8.5" 
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
