--- a/backend/.env.ignore
+++ b/backend/.env.ignore
@@ -3,7 +3,7 @@ CLIENT_SECRET=00737327816fce392c2acc6502935488
 
 FRONTEND_URL=http://localhost:5173 #local
 # FRONTEND_URL=https://influex-airth-two.vercel.app
-REDIRECT_URI=https://influex-airth-two.vercel.app/ #airth 
+REDIRECT_URI=https://influex-airth.vercel.app/instagram-login
 JWT_SECRET=airth@2025
 
 AWS_LAMBDA_API_URL=https://lcxr75z1ag.execute-api.eu-north-1.amazonaws.com/dev/frontendtestingfunction
