--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
     "shadcn-ui": "^0.9.4",
     "tailwind-merge": "^3.0.1",
